[package]
name = "manager"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "manager"
path = "src/lib.rs"

[[bin]]
name = "fog_node"
path = "src/bin/fog_node/main.rs"

[[bin]]
name = "market"
path = "src/bin/market/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.12.0"
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.17", features = ["full"] }
rocket = { version = "0.5.0-rc.1", default-features = false, features = [
    "json",
    "uuid",
] }
schemars = "0.8"
okapi = { version = "0.7.0-rc.1", features = ["impl_json_schema"] }
rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
if_chain = "1.0.2"
thiserror = "1.0.30"
anyhow = "1.0.56"
chrono = "0.4"
ron = "0.7.0"
uom = { version = "0.32.0", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }
futures = "0.3.21"
lazy_static = "1.4.0"
lazy-regex = "2.3.0"
tokio-cron-scheduler = "0.6.0"
kube = { version = "0.71.0", features = ["client", "runtime"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
bytes = "1.1.0"