[package]
name = "echo"
version = "0.1.0"
authors = ["Volodia PAROL-GUARINO <volodia.parol-guarino@protonmail.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["mimalloc"]

# Enable mimalloc
mimalloc = []
# Enable jaeger
jaeger = [
    "opentelemetry",
    "opentelemetry-jaeger",
    "reqwest-middleware",
    "reqwest-tracing",
    "tracing-opentelemetry",
    "tracing-actix-web",
]


[dependencies]
actix-web = "4.2.1"
actix-web-opentelemetry = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10"
lazy_static = "1.4.0"
mimalloc = { version = "0.1.32", default-features = false }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"], optional = true }
opentelemetry-jaeger = { version = "0.17.0", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false, optional = true }
prometheus = "0.13.3"
reqwest = { version = "0.11.11", features = ["json", "gzip"] }
reqwest-middleware = { version = "0.2.0", optional = true }
reqwest-tracing = { version = "0.4.0", features = [
    "opentelemetry_0_18",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.2", features = [
    "opentelemetry_0_18",
], optional = true }
tracing-forest = { version = "0.1.5", features = ["tokio"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.18.0", optional = true }
