[package]
name = "echo"
version = "0.1.0"
authors = ["Volodia PAROL-GUARINO <volodia.parol-guarino@protonmail.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["mimalloc"]

# Enable mimalloc
mimalloc = []
# Enable jaeger
jaeger = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-jaeger",
    "reqwest-tracing",
    "tracing-opentelemetry",
    "tracing-actix-web",
]


[dependencies]
actix-web = "4.4"
actix-web-opentelemetry = "0.16"
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
futures = "0.3"
influxdb2 = "0.4"
influxdb2-derive = "0.1"
influxdb2-structmap = "0.2"
num-traits = "0.2"
lazy_static = "1.4"
mimalloc = { version = "0.1", default-features = false }
opentelemetry = { version = "0.21", default-features = false, optional = true }
opentelemetry_sdk = { version = "0.21", features = [
    "rt-tokio",
], default-features = false, optional = true }
opentelemetry-jaeger = { version = "0.20", features = [
    "reqwest_collector_client",
    "rt-tokio",
], default-features = false, optional = true }
reqwest = { version = "0.11", features = ["json", "gzip"] }
reqwest-middleware = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "b53d355", package = "reqwest-middleware" }
reqwest-tracing = { git = "https://github.com/TrueLayer/reqwest-middleware", rev = "b53d355", package = "reqwest-tracing", features = [
    "opentelemetry_0_21",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = [
    "opentelemetry_0_21",
], optional = true }
tracing-forest = { version = "0.1", features = ["tokio"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.22", optional = true }
uom = { version = "0.34", default-features = false, features = [
    "f64",
    "si",
    "autoconvert",
] }

helper = { path = "./helper" }
helper_derive = { path = "./helper_derive" }
model = { path = "./model" }
