[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.17", features=["full"]}
warp = "0.3"
validator = { version = "0.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
log = "0.4"
env_logger = "0.9"
sla = { path = "../sla" }
http-api-problem = { version="0.51", features = ["warp"] }