[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version = "1.17", features=["full"]}
warp = "0.3"
validator = { version = "0.12", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
http-api-problem = { version="0.51", features = ["warp"] }
uom = { version = "0.32.0", default-features = false, features = ["f64", "si", "autoconvert", "use_serde"]}
sla = { path = "../sla" }
node-logic = { path = "../node-logic" }