[package]
name = "market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.12.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
http-api-problem = { version = "0.51", features = ["warp"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
if_chain = "1.0.2"
thiserror = "1.0.30"
anyhow = "1.0.56"
chrono = "0.4"
ron = "0.7.0"
uom = { version = "0.32.0", default-features = false, features = [
  "f64",
  "si",
  "autoconvert",
] }
shared_models = { path = "../shared_models" }
