[package]
name = "node-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
thiserror = "1.0.30"
log = "0.4"
env_logger = "0.9"
uom = "0.32.0"
regex = "1"
lazy_static = "1.4"
if_chain = "1.0.2"
kube-metrics = { path = "../kube-metrics" }
sla = { path = "../sla" }