[package]
name = "openfaas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.12.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
uom = { version = "0.32.0", default-features = false, features = [
  "f64",
  "si",
  "autoconvert",
] }
async-trait = "0.1"
thiserror = "1.0.30"
sla = { path = "../sla" }
