[package]
name = "shared_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.12.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = "0.4"
uom = { version = "0.32.0", default-features = false, features = ["f64", "si"] }
lazy_static = "1.4.0"
thiserror = "1.0.30"
uom_helpers = { path = "../uom_helpers" }
