[package]
name = "uom_helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12.0"
lazy_static = "1.4"
regex = "1"
thiserror = "1.0.30"
uom = { version = "0.32.0", default-features = false, features = [
  "f64",
  "si",
  "autoconvert",
] }
schemars = "0.8"
